# audiowmark

./: .gitignore  Dockerfile  Makefile.am  configure.ac
include/: Makefile.am
src/: .gitignore  Makefile.am  stdoutwavoutputstream.cc
